--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <iframe></iframe>
     <p><strong>{{model.width}}</strong> x <strong>{{model.height}}</strong></p>
 </section>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
