--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <p><strong>{{model.width}}</strong> x <strong>{{model.height}}</strong></p>
 </section>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
