--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 # Just enough front matter...
 ---
 <!doctype html>
-<html lang="en" ng-app="rwdRandomiser" ng-strict-di>
+<html lang="en" ng-strict-di>
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width" />
@@ -22,7 +22,7 @@
 
 <iframe></iframe>
 
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-<script src="js/app.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js" ></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" data-main="js/app"></script>
 </body>
 </html>
