--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header class="banner">
     <h1 class="headline"><b class="headline__highlight">RWD</b>Randomiser</h1>
     <form ng-submit="randomise()" class="form">
-        <p class="dimensions">## model.width ##<b class="dimensions__x">x</b>## model.height ##</p>
+        <p class="dimensions"><b ng-bind="model.width"></b><b class="dimensions__x">x</b><b ng-bind="model.height"></b></p>
         <input ng-model="model.url" type="url" class="form__input" /><button type="submit" class="form__button"><b class="form__button-text">Go</b></button>
     </form>
 </header>
