Automatically adding protocol to urls if it's missing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="headline"><b class="headline__highlight">RWD</b>Randomiser</h1>
     <form ng-submit="randomise()" class="form">
         <p class="dimensions"><b ng-bind="model.width"></b><b class="dimensions__x">x</b><b ng-bind="model.height"></b></p>
-        <input ng-model="model.url" type="url" class="form__input" /><button type="submit" class="form__button"><b class="form__button-text">Go</b></button>
+        <input ng-model="model.url" type="text" class="form__input" /><button type="submit" class="form__button"><b class="form__button-text">Go</b></button>
     </form>
 </header>
 
