Adding footer with GitHub and Twitter links

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 
 <iframe></iframe>
 
+<footer class="footer">
+    <small><a href="https://github.com/davidjgoss/rwd-randomiser">Built</a> by <a href="https://twitter.com/davidjgoss">@davidjgoss</small>
+</footer>
+
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js" ></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" data-main="js/app"></script>
 </body>
