--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 # Just enough front matter...
 ---
 <!doctype html>
-<html lang="en" ng-strict-di>
+<html lang="en" ng-app="rwdRandomiser">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width" />
     <title>RWD Randomiser</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Passion+One" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.js"></script>
+    <script src="app.js"></script>
 </head>
 <body ng-controller="AppController">
 
@@ -26,7 +28,5 @@
     <small><a href="https://github.com/davidjgoss/rwd-randomiser">Built</a> by <a href="https://twitter.com/davidjgoss">@davidjgoss</small>
 </footer>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js" ></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" data-main="js/app"></script>
 </body>
 </html>
